# cinnamon-desktop

./: Makefile.am  configure.ac
debian/: control  gir1.2-tzmap-1.0.install  libtzmap-dev.install  libtzmap0.install  rules
libtzmap/: Makefile.am  tzmap-timezone-map.c  tzmap-timezone-map.h
